# luaApp

./: README.md
Android/app/: CMakeLists.txt  build.gradle
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: JniOnLoad.cpp  LuaTestJni.cpp  LuaTestJni.h  native-lib.cpp
Android/app/src/main/java/com/meitu/: MainActivity.java
Android/app/src/main/res/layout/: activity_main.xml
Android/app/src/main/res/values/: strings.xml
Android/gradle/wrapper/: gradle-wrapper.properties
iOS/luaApp/: AppDelegate.m  Lua_Call_CPP.lua  PublicFuncByiOS.mm  main.m
iOS/luaApp.xcodeproj/: project.pbxproj
luaApp/: AppDelegate.h  CPP_Call_Lua.lua  LuaTest.cpp  LuaTest.hpp  PublicFuncByiOS.h  ViewController.h  ViewController.mm  add.lua
luaApp.xcodeproj/: project.pbxproj
luaApp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
luaApp.xcodeproj/xcuserdata/HW.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: Log.h  LuaTest.cpp  LuaTest.hpp
